--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
 
     <h1>ic-07 - Intro to JavaScript</h1>
 
-    <button type="button">Button 1</button>
+    <div>
 
-    <div id="random_num">
-        When Button 1 is clicked, a random number should appear here. 
+        <button id = "button" type="button" onclick="button1Clicked()">Button 1</button>
+
+        <div id="button-div" class="gen">
+            Text inside of my div
+        </div>
     </div>
+
+    <script src="main.js"></script>
 
 </body>
 
